--- a/css/contato.css
+++ b/css/contato.css
@@ -57,10 +57,52 @@ footer{
 
 .artigo{
     text-align: center;
-    margin-bottom: 300px;
+    margin-bottom: 2px;
     display: flex;
     justify-content: center;
+    transform: translate(-1%, -350%);
 }
+
+.artigo-correcao{
+    transform: translate(-1%, -90%);
+    display: flex;
+}
+
+.linha-horizontal{
+    size: 7px;
+    height: 50%;
+    width: 35%;
+    border-color: black;
+}
+
+.artigos-lista{
+    margin-left: 100px;
+    
+}
+
+.artigos-lista ul{
+    display: flex;
+    list-style: none;
+}
+
+.artigos-lista ul li{
+   width: 100px;
+   align-items: center;
+   display: flex;
+}
+
+
+.problemas{
+    width: 100%;
+    height: 100px;
+}
+
+footer{
+    background-color: #2F3540;
+    width: 100%;
+    height: 300px;
+}
+
 
 
 
