--- a/pedro/css/index.css
+++ b/pedro/css/index.css
@@ -45,7 +45,7 @@ header{
 }
 
 .sub-cabecalho {
-    margin-left: auto;
+    margin-left: 100px;
 }
 
 .sub-cabecalho ul {
@@ -56,7 +56,7 @@ header{
 
 .sub-cabecalho ul li {
     width: 140px;
-    padding-right: 60px;
+    padding-right: 40px;
     padding-bottom: 20px;
     color: #fff;
 
@@ -76,22 +76,66 @@ header{
 .search-box{
     position: absolute;
     top: 10%;
-    right: 45%;
+    right: 39%;
     
     background-color: white;
+    
     height: 40px;
-    border-radius: 30px;
+    width: 350px;
+    border-radius: 40px;
 
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: space-around;
+    
 }
 
 .seach-text{
-    background-color: none;
+   background-color: none;
     border: 0;
-    width: 300px;
-
+    width: 250px;
+    align-items: center;
     
 
+}
+
+.area-ofertas{
+    width: 100%;
+    height: 280px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.area-ofertas img{
+    width: 100%;
+    height: 240px;
+
+}
+
+.titulo{
+    display: flex;
+    margin-left: 40%;
+}
+
+.area-marca{
+    width: 100%;
+    height: 220px;
+    background-color: aquamarine;
+}
+
+.caixa-marca{
+    display: flex;
+    width: 15%;
+    height: 150px;
+    background-color: blanchedalmond;
+    align-content: center;
+    justify-items: center;
+}
+
+
+
+
+footer{
+    background-color: #2f3540;
+    height: 80px;
 }
