--- a/pedro/css/index.css
+++ b/pedro/css/index.css
@@ -121,6 +121,7 @@ header{
     width: 100%;
     height: 220px;
     background-color: aquamarine;
+    align-content: space-between;
 }
 
 .caixa-marca{
@@ -128,8 +129,8 @@ header{
     width: 15%;
     height: 150px;
     background-color: blanchedalmond;
-    align-content: center;
-    justify-content: space-around;
+    margin: auto;
+    
 }
 
 
