--- a/css/contato.css
+++ b/css/contato.css
@@ -30,7 +30,8 @@ header{
 body{
     background-color: #F7F6F0;
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
+    height: 0;
 }
 
 .texto-pesquisa{
@@ -48,11 +49,6 @@ body{
     height: 50px;
 
     border-color: #D9D9D9;
-}
-
-
-footer{
-    background-color: #2F3540;
 }
 
 .artigo{
@@ -83,21 +79,66 @@ footer{
 .artigos-lista ul{
     display: flex;
     list-style: none;
+    
 }
 
 .artigos-lista ul li{
    width: 100px;
    align-items: center;
    display: flex;
+   margin-right: 80px;
 }
-
 
 .problemas{
     width: 100%;
     height: 100px;
+    
 }
 
+.ajustar{
+    width: 40%;
+    height: 50px;
+    transform: translate(-15%, -90%);
+    display: flex;
+}
+
+.caixa-de-suporte{
+    height: 100px;
+    position: absolute;
+    bottom: 320px;
+    left: 80px;
+}
+
+.caixa-suporte-2{
+    position: absolute;
+    bottom: 280px;
+    left: 880px;
+}
+
+.cor-suporte{
+    color: #8C8681;
+}
+
+.imagens-footer{
+    height: 100px;
+    width: 40px;
+    margin-left: 100px;
+    align-content: center;
+    justify-items: center;
+    margin-right: 205px;
+}
+
+.cor-branca{
+    color:white;
+    justify-items: center;
+    align-content: center;
+    display: flex;
+    position: absolute;
+    top: 115%;
+    left: 30%;
+}
 footer{
+    display: flex;
     background-color: #2F3540;
     width: 100%;
     height: 300px;
