--- a/css/contato.css
+++ b/css/contato.css
@@ -9,6 +9,7 @@
     font-style: normal;
 }
 
+
 .h1{
     font-family: "comfortaa-regular";
     font-optical-sizing: auto;
@@ -20,7 +21,7 @@ header{
     background-color: #F7F6F0;
     display: flex;
     justify-content: center;
-    margin-top: 100px;
+    margin-top: 90px;
     font-size:x-large;
     justify-items: center;
     text-align: center;
@@ -35,7 +36,7 @@ body{
 }
 
 .texto-pesquisa{
-    margin-top: 40%;
+    margin-top: 39%;
     margin-left: 190%;
     transform: translate(-265%, -500%);
 
@@ -102,6 +103,11 @@ body{
     display: flex;
 }
 
+.alinhamento{
+    display: flex;
+    align-items: center;
+}
+
 .caixa-de-suporte{
     height: 100px;
     position: absolute;
@@ -141,7 +147,9 @@ footer{
     display: flex;
     background-color: #2F3540;
     width: 100%;
-    height: 290px;
+    height: 139px;
+    align-items: center;
+    justify-content: center;
 }
 
 
