--- a/css/index.css
+++ b/css/index.css
@@ -104,13 +104,7 @@ header {
     width: 200px;
     height: 29px;
     align-items: center;
-<<<<<<< HEAD
-
 }
-
-=======
-}
->>>>>>> 325955fae26651537bbd62c007a64d82de7743a6
 
 .area-ofertas {
    height: 400px;
@@ -163,117 +157,48 @@ header {
 
 footer {
     background-color: #2f3540;
-<<<<<<< HEAD
-    height: 80px;
+    height: 280px;
 }
 
-=======
-    height: 120px;
+.container-footer{
+    max-width: 1400px;
+    padding: 0 4%;
+    margin: auto;
+}
+.row-footer{
     display: flex;
-    flex-direction: row;
-    
+    flex-wrap: wrap;
 }
 
-.rodape {
-    display: flex;
-    justify-content: space-around !important;
-    align-items: center;
-    height: 50px;
-    background-color: #A45A01;
-    margin: 1% 1% 1% 1%;
-    border-radius: 30px;
-    overflow: hidden;
+.footer-col{
+    width: 25%;
+    padding: 0 15px;
 }
-
-.rodape ul{
-    display: flex;
+.footer-col h4{
+    font-size: 22px;
+    color: white;
+    margin-bottom: 20px;
+    font-weight: 500;
+    position: relative;
+    text-transform: uppercase;
+    margin-top: 20px;
+}
+.footer-col ul{
     list-style: none;
 }
-
-.rodape h5{
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 5%;
+.footer-col ul li{
+    margin: 10px 0;
 }
-
-.rodape h6{
-    font-size: 18px;
-    font-weight: 500;
+.footer-col ul li a{
+    font-size: 16px;
+    text-transform: capitalize;
+    color: white;
     text-decoration: none;
-    color: #33302B;
+    font-weight: 300;
+    display: block;
+    transition: all 0.3s ease;
 }
-
-.rodape h6 :hover{
-    text-decoration: underline;
-    color: black;
+.footer-col ul li a:hover{
+    color: #cecdcd;
+    padding-left: 10px;
 }
-
-.rodape a{
-    text-decoration: none;
-    
-}
-
-.link-home-rodape{
-    text-decoration: none;
-}
-
-.area-link-contato-rodape{
-    margin: 2px -4% 0 -7%;
-}
-
-.titulos-colunas-rodape{
-    display: flex;
-    justify-content: center;
-}
-
-.area-link-rodape{
-    display: flex;
-    justify-content: center;
-}
-
-
-.area-link-rodape a{
-    display: flex;
-    width: 36%;
-}
-
-.area-link-rodape a :hover{
-    text-decoration: underline;
-}
-
-.icon-seta-direita-rodape{
-    text-decoration: none !important;
-    color: #33302B;
-    font-size: 25px !important;
-}
-
-.apps-rodape{
-    margin-top: 40px;
-
-}
-
-.apps-rodape ul{
-    margin-left: -2.5%;
-    
-}
-
-.apps-rodape ul li{
-    margin: 2%
-    
-}
-
-.apps-rodape i{
-    font-size: 1%;
-    text-decoration: none;
-    color: #33302B;
-}
-
-.apps-rodape i :hover{
-    text-decoration: none;
-    color: #33302B;
-}
-
-.icons-apps-rodape{
-    font-size: 10px;
-}
->>>>>>> 325955fae26651537bbd62c007a64d82de7743a6
