--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,7 @@
     font-style: normal;
 }
 
+
 * {
     padding: 0;
     margin: 0;
@@ -40,8 +41,12 @@ header {
     background-color: #2f3540;
 }
 
-.logo {
+.a{
     display: flex;
+    
+}
+
+.logo {
     margin-top: 1%;
     width: 20%;
     height: 150px;
