--- a/css/index.css
+++ b/css/index.css
@@ -162,7 +162,8 @@ header {
 
 footer {
     background-color: #2f3540;
-    height: 280px;
+    height: 420px;
+    overflow: hidden;
 }
 
 .container-footer{
